lab1/Test/L1-A-10-28.output
Error Type A at Line 19
Error Type B at Line 41
