lab1/Test/L1-A-10-28.cmm
int ZqYrghKC0icQq 
;
struct K {
  struct dn1ePaooR5 xw362bTDVv1uw ;
  int NWWO , JUN5vJbDTW4iodjqVkJ = sScts4G5qAzac ;
}ggqrDlUAak4ee4W , Vg4cRueFMUbzXGkRyN [ 553567987 
  ] 

;
struct n UK5bKsDINAcZuSJYfHW3 ( ) {
  int Faa0yWx2cVs ;
  if ( ulHnjbayC7v8 )   while ( drj5RXP0_g )   return 
    GqJenIhcmdY1Q3qM3M0u = b9bf_P6VQNiB8aw || KF6TWY7LQhFE 
    != C606LO6 - m * - ! - - K7qkmZ_t7mlyDqqWP0 [ GenmHHGGj5yOQZaA6 
    && I87dReVS98 + LxEseFdGvEpGC5ERF2Qd ( iH18hSNHwND 
    , k_L_JUo4Bhv1GkrixZ3R || kQNDdD >= d4 - ewEJY6I0 
    / ( o0 = _S5iDwKN8c79D6vp1LG < ViXoM7AJPsDB6d > VVO 
    <= 1409178237 . R_dabj ) . uvr5KR / 1188965665.145578877 
    ^) . heL7h97Gos9bMupbMOfz ] == ! - ! e1OjdGAq1 ( ) 
    / I ;


}
float ;
int ;
struct {
  int ZGkfDOTFk ;
};
int sLO6W ( int XbAFSX ) {
  hWJF0EEnU ;
  DpMbmwz2CcDON ;
  if ( z6Ian ) {
    rUAzDjS0m7FuY ;
    if ( WygBLB5PodRVa5 )     Goph ;
else     if ( OW4x3HWCE )     DbKC1Gq2g7yj50N7Z ;


  }else   dESV4U6cXr ;

}
int z_UhGhkgq1S3 ( int akds , int LArDd5 ) <= {
}
int ;
int ;
